Persistence mysql integration (#1)
* scheduled wf metadata dao layer added

* persistence layer integrated for metadata

* mysql persistence layer integrated for index dao added.

* finalized lockService module.

* removed unused e6 persistence module

* dependencies aligned.

* enabled redis

* added README.md

* updated README.md

* updated README.md

* updated README.md

* updated README.md

* updated README.md

* updated README.md

* updated README.md and installed maven warpper

* updated README.md

* updated README.md

* updated README.md

* updated README.md

* updated README.md

* added .travis.yml

* disabled mysql test cases.

* ignored mysql test cases.

* added coveralls and jacoco plugin

Co-authored-by: Ankit <Ankit@LAPTOP-C3KNB38D>

--- a/scheduledwf-server/src/main/resources/log4j.properties
+++ b/scheduledwf-server/src/main/resources/log4j.properties
@@ -26,6 +26,7 @@ log4j.logger.com.netflix.conductor.core.execution.WorkflowExecutor=INFO
 log4j.logger.com.netflix.conductor.service.ExecutionLockService=INFO
 
 log4j.logger.net.jas34.scheduledwf.execution.DefaultSchedulerManager=DEBUG
+log4j.logger.net.jas34.scheduledwf.scheduler.TriggerScheduledWorkFlowTask=DEBUG
 
 # A1 uses PatternLayout.
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
