--- a/scheduledwf-core/pom.xml
+++ b/scheduledwf-core/pom.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>scheduledwf-parent</artifactId>
-        <groupId>net.jas34.scheduledwf</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<parent>
+		<artifactId>scheduledwf-parent</artifactId>
+		<groupId>net.jas34.scheduledwf</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>scheduledwf-core</artifactId>
+	<artifactId>scheduledwf-core</artifactId>
 
-    <dependencies>
-        <!--        Since conductor server artificat name on maven not follow conventions. At the moment locally installed
-         \from https://repo.maven.apache.org/maven2/com/netflix/conductor/conductor-server/2.30.4/-->
-        <dependency>
-            <groupId>com.netflix.conductor</groupId>
-            <artifactId>conductor-server</artifactId>
-            <version>${conductor-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.coreoz</groupId>
-            <artifactId>wisp</artifactId>
-            <version>${wisp-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.cronutils</groupId>
-            <artifactId>cron-utils</artifactId>
-            <version>${cron-utils-version}</version>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>com.netflix.conductor</groupId>
+			<artifactId>conductor-server</artifactId>
+			<classifier>all</classifier>
+			<version>${conductor-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.coreoz</groupId>
+			<artifactId>wisp</artifactId>
+			<version>${wisp-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.cronutils</groupId>
+			<artifactId>cron-utils</artifactId>
+			<version>${cron-utils-version}</version>
+		</dependency>
+	</dependencies>
 
 </project>
