--- a/scheduledwf-server/pom.xml
+++ b/scheduledwf-server/pom.xml
@@ -27,7 +27,13 @@
             <artifactId>scheduledwf-resources</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>net.jas34.scheduledwf</groupId>
+			<artifactId>scheduled-mysql-persistence</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 
     <build>
         <plugins>
