--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>io.github.jas34</groupId>
 	<artifactId>scheduledwf-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-rc1</version>
 	<name>Scheduled Conductor-Workflow</name>
 	<description>Scheduled Conductor-Workflow is an extension of netflix conductor to provide capability to schedule a
 		workflow in micro service architecture
@@ -29,7 +29,7 @@
 		<connection>scm:git:git://github.com/jas34/scheduledwf.git</connection>
 		<developerConnection>scm:git:ssh://github.com/jas34/scheduledwf.git</developerConnection>
 		<url>https://github.com/jas34/scheduledwf</url>
-		<tag>HEAD</tag>
+		<tag>1.0.0-rc1</tag>
 	</scm>
 
 	<distributionManagement>
