--- a/scheduled-mysql-persistence/pom.xml
+++ b/scheduled-mysql-persistence/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.github.jas34</groupId>
 		<artifactId>scheduledwf-parent</artifactId>
-		<version>1.0.0-rc1</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>scheduled-mysql-persistence</artifactId>
 	<name>Archetype - scheduled-mysql-persistence</name>
