--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,7 @@
 		</developer>
 	</developers>
 	<scm>
-		<connection>scm:git:git://github.com/jas34/scheduledwf.git</connection>
-		<developerConnection>scm:git:ssh://github.com/jas34/scheduledwf.git</developerConnection>
+		<connection>https://github.com/jas34/scheduledwf.git</connection>
 		<url>https://github.com/jas34/scheduledwf</url>
 		<tag>HEAD</tag>
 	</scm>
