--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		</developer>
 	</developers>
 	<scm>
-		<connection>https://github.com/jas34/scheduledwf.git</connection>
+		<connection>scm:git:https://github.com/jas34/scheduledwf.git</connection>
 		<url>https://github.com/jas34/scheduledwf</url>
 		<tag>HEAD</tag>
 	</scm>
